dashboard/portainer/3.service-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: devops
spec:
  type: NodePort
  selector:
    app: portainer
  ports:
    - name: web
      port: 9000
      targetPort: 9000
